--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SELF_HOSTED_MODE=true
 DISABLE_SIGNUP=true
 
 UPLOAD_PATH="./data/uploads"
-DATABASE_URL="postgresql://user@localhost:5432/taxhacker"
+DATABASE_URL="postgresql://user@localhost:5432/InvoiceIQ"
 
 # You can put it here or the app will ask you to enter it
 OPENAI_API_KEY=""
@@ -18,4 +18,5 @@ STRIPE_WEBHOOK_SECRET=""
 # Resend Configuration (optional, use if you want to send emails)
 RESEND_API_KEY=""
 RESEND_AUDIENCE_ID=""
-RESEND_FROM_EMAIL="TaxHacker <user@localhost>"
+RESEND_FROM_EMAIL="InvoiceIQ <user@localhost>"
+
