--- a/etc/nginx/taxhacker.app.conf
+++ b/etc/nginx/taxhacker.app.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name taxhacker.app;
+    server_name InvoiceIQ.app;
 
     charset utf-8;
     client_max_body_size 256M;
@@ -22,7 +22,7 @@ server {
         add_header "Strict-Transport-Security" "max-age=31536000;includeSubDomains";
         add_header "X-Content-Type-Options" "nosniff";
         add_header "Referrer-Policy" "strict-origin-when-cross-origin";
-        add_header "Permissions-Policy" "accelerometer=(),camera=(),geolocation=(self 'https://taxhacker.app'),gyroscope=(),magnetometer=(),microphone=(),payment=(),usb=()";
+        add_header "Permissions-Policy" "accelerometer=(),camera=(),geolocation=(self 'https://InvoiceIQ.app'),gyroscope=(),magnetometer=(),microphone=(),payment=(),usb=()";
 
         proxy_set_header "Host" $http_host;
         proxy_set_header "X-Forwarded-Host" $host;
