--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -9,7 +9,7 @@ services:
       - NODE_ENV=production
       - SELF_HOSTED_MODE=true
       - UPLOAD_PATH=/app/data/uploads
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/taxhacker
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/InvoiceIQ
     volumes:
       - ./data:/app/data
     restart: unless-stopped
@@ -24,7 +24,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=taxhacker
+      - POSTGRES_DB=InvoiceIQ
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     restart: unless-stopped
